fix photo alignment in grid view (particularly for random view)

--- a/src/app/photos-shared/components/grid-photo/grid-photo.component.scss
+++ b/src/app/photos-shared/components/grid-photo/grid-photo.component.scss
@@ -7,6 +7,7 @@ a {
 .full-image {
     display: grid;
     text-align: center;
+    grid-template-rows: max-content;
     height: 100vh;
 }
 
